src/styles/styles.scss
* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

html,
body {
  --primaryText: #ffc600;
  --secondaryText: #ccc;
  --linkText: #047be3;
  --bg: #1b2d3a;
  --windowBg: #193549;
  --focusBg: hsl(205, 51%, 16%);
  --mainTerminalTaskbarText: white;
  background-color: var(--bg);

  background-color: var(--bg);
  color: var(--secondaryText);
  font-size: 18px;
  line-height: 1.6;
  width: 100%;
  height: 100%;
}

.break {
  flex-basis: 100%;
  height: 0;
}

header {
  margin-left: 10vw;
  margin-top: 3vh;
}

h1 {
  color: var(--primaryText);
  font-size: 50px;
  letter-spacing: -2px;
  margin-bottom: 20px;
}

h2 {
  color: var(--primaryText);
}

h3 {
  margin-bottom: 10px;
}

ul {
  list-style-type: none;
}

a {
  color: var(--primaryText);
  text-decoration: none;
}

p {
  margin: 20px 0;
}

.container {
  width: 80vw;
  height: auto;
  margin: 3vh auto auto auto;
  display: flex;
  justify-content: left;
  align-items: left;
}

.mainContainer {
  min-height: 100%;
  width: auto;
  width: 100%;
  margin: 0;
  display: grid;
  grid-template-rows: auto 1fr auto;
}

.hidden {
  display: none;
}

//Responsive font sizes
@media (max-width: 1200px) {
  legend {
    font-size: calc(1.275rem + 0.3vw);
  }
  h1,
  .h1 {
    font-size: calc(1.375rem + 1.3vw);
  }
  h2,
  .h2 {
    font-size: calc(1.325rem + 0.9vw);
  }
  h3,
  .h3 {
    font-size: calc(1.3rem + 0.6vw);
  }
  h4,
  .h4 {
    font-size: calc(1.275rem + 0.3vw);
  }
  .display-1 {
    font-size: calc(1.725rem + 5.7vw);
  }
  .display-2 {
    font-size: calc(1.675rem + 5.1vw);
  }
  .display-3 {
    font-size: calc(1.575rem + 3.9vw);
  }
  .display-4 {
    font-size: calc(1.475rem + 2.7vw);
  }
  .close {
    font-size: calc(1.275rem + 0.3vw);
  }
}

@media (max-width: 400px) {
  h1 {
    font-size: calc(1.375rem + 0.5vw);
  }

  h3 {
    font-size: calc(1rem + 0.6vw);
  }
}

/* Tooltip container */
.tooltip {
  position: relative;
  display: inline-block;
}

/* Tooltip text */
.tooltip .tooltiptext {
  visibility: hidden;
  background-color: var(--bg);
  color: var(--primaryText);
  text-align: center;
  padding: 5px;
  border-radius: 6px;

  /* Position the tooltip text - see examples below! */
  position: absolute;
  bottom: 125%;
  left: 50%;
  margin-left: -40px;
  z-index: 1;
}

/* Show the tooltip text when you mouse over the tooltip container */
.tooltip:hover .tooltiptext {
  visibility: visible;
}

footer {
  background-color: var(--bg);
  padding-left: 3vw;
  padding-bottom: 1vh;
  margin-top: auto;
}

footer > a {
  transition: color 0.4s ease-in-out;
}

footer > a:hover {
  color: var(--linkText);
}

